# Gng2D

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
sandbox/: CMakeLists.txt  config.lua  imgui.ini  main.cpp  sandbox
sandbox/data/: config.lua  scene.lua
sandbox/data/scene_sandbox/: scene.lua
sandbox/data/scripts/entities/: redx.lua
sandbox/data/scripts/recipes/: redx.lua
sandbox/source/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  main.cpp
source/commons/: CMakeLists.txt
source/commons/inc/Gng2D/commons/: args_vector.hpp  assert.hpp  comp_util_macros.hpp  component_args.hpp  imgui.hpp  log.hpp  luna.hpp  luna_table.hpp  repository.hpp  repository.ipp  scene_interface.hpp  system_interface.hpp  types.hpp
source/commons/inc/Gng2D/commons/luna/: stack.hpp  state.hpp  type.hpp  type.ipp
source/commons/src/: args_vector.cpp  luna.cpp  luna_stack.cpp  luna_state.cpp  luna_table.cpp  luna_type.cpp  repository.cpp
source/commons/src/luna/: stack.cpp  state.cpp  type.cpp
source/commons/tst/: luna.cpp  luna_stack.cpp  luna_state.cpp
source/commons/tst/luna/: stack.cpp  state.cpp  type.cpp
source/components/: CMakeLists.txt
source/components/inc/Gng2D/components/: colider.hpp  collider.hpp  component_args.hpp  component_meta_info.hpp  concept.hpp  concepts.hpp  hoverable.hpp  info.hpp  input.hpp  layer.hpp  lua_script.hpp  mouse_controlls.hpp  position.hpp  properties.hpp  relationship.hpp  sprite.hpp  transform.hpp  transform2d.hpp
source/components/inc/Gng2D/components/meta/: api_calls.hpp  component_args.hpp  component_meta_info.hpp  component_userdata.hpp  properties.hpp  properties_macro.hpp  signals.hpp  util_funcs.hpp
source/components/src/: collider.cpp  hoverable.cpp  info.cpp  lua_script.cpp  position.cpp  relationship.cpp  sprite.cpp  transform.cpp  transform2d.cpp  util_macros.hpp
source/components/tst/: collider.cpp  relationship.cpp  transform.cpp
source/core/: CMakeLists.txt
source/core/inc/Gng2D/core/: app.hpp  application.hpp  asset_registry.hpp  global.hpp  global_assets.hpp  log.hpp  luna.hpp  main_loop.hpp  scene_interface.hpp
source/core/src/: app.cpp  application.cpp  asset_registry.cpp  global_assets.cpp  luna.cpp  main.cpp  main_loop.cpp  repository.cpp
source/core/tst/: luna.cpp  test.lua
source/editor/: CMakeLists.txt
source/editor/inc/Gng2D/editor/: editor.hpp
source/editor/src/: editor.cpp
source/entities/: CMakeLists.txt
source/entities/inc/Gng2D/entities/: entity_recipe.hpp  lua_api.hpp  recipe.hpp  red_x.hpp
source/entities/src/: entity_recipe.cpp  lua_api.cpp  recipe.cpp
source/entities/tst/: lua_api.cpp
source/gui/: CMakeLists.txt
source/gui/inc/Gng2D/gui/: icon.hpp  widget.hpp
source/gui/src/: icon.cpp  widget.cpp
source/scene/: CMakeLists.txt
source/scene/inc/Gng2D/scene/: actions_handler.hpp  assets.hpp  collision_system.hpp  component_library.hpp  entity_recipe.hpp  entity_renderer.hpp  entity_scripts.hpp  input_handler.hpp  mouse_system.hpp  position_system.hpp  relation_system.hpp  scene.hpp  scene_repository.hpp
source/scene/inc/Gng2D/scene/debug/: imgui_overlay.hpp
source/scene/src/: actions_handler.cpp  assets.cpp  collision_system.cpp  component_library.cpp  entity_recipe.cpp  entity_renderer.cpp  input_handler.cpp  mouse_system.cpp  position_system.cpp  relation_system.cpp  scene.cpp
source/scene/src/debug/: imgui_overlay.cpp
source/scene/tst/: input_handler.cpp  mouse_system_tests.cpp  relation_system.cpp  relation_system_tests.cpp
source/systems/inc/Gng2D/systems/: overlap_system.hpp
source/types/: CMakeLists.txt
source/types/inc/Gng2D/types/: coroutine.hpp  modfunc.hpp  overlap_detector.hpp  v2d.hpp
source/types/tst/: coroutine_tests.cpp
